# bash_purepython

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yaml  pytest.yaml
bash_purepython/: _color.py  _io.py  cat.py  cp.py  cut.py  dirname.py  env.py  false.py  grep.py  gunzip.py  gzip.py  head.py  ls.py  mkdir.py  mv.py  nl.py  realpath.py  rev.py  rm.py  rmdir.py  seq.py  sleep.py  sort.py  tail.py  tar.py  tee.py  touch.py  tr.py  true.py  uniq.py  unzip.py  wc.py  which.py  yes.py  zip.py
bash_python_utils/: _io.py  basename.py  cp.py  cut.py  date.py  echo.py  grep.py  gzip.py  head.py  help.py  ls.py  mkdir.py  mv.py  nl.py  pwd.py  realpath.py  rm.py  rmdir.py  seq.py  sleep.py  sort.py  tail.py  tar.py  touch.py  tr.py  uniq.py  unzip.py  wc.py  whoami.py  zip.py
tests/: test_formatting.py
