[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bash_python_utils"
version = "0.1.0"
description = "PurePython implementations of common bash utilities"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "build",
    "ruff",
    "twine",
]

[tool.ruff]
target-version = "py313"
line-length = 120
select = [
    "E", # Pycodestyle errors
    "F", # Pyflakes
    "I", # Isort
    "PL", # Pylint
    "UP", # Pyupgrade
]

[tool.pylint.format]
max-line-length = 120

[tool.setuptools.packages.find]
where = ["."]
include = ["bash_python_utils*"]